# desktop-ctrl

./: CMakeLists.txt  README.md
include/: types.h
src/: clipboard.cpp  clipboard.h  input.cpp  input.h  json.cpp  json.h  main.cpp  screen.cpp  screen.h  screenshot.cpp  screenshot.h  types.cpp
